# rag-wiki

./: .gitignore  LICENSE  README.md  USER_MANUAL.md  benchmark.py  chat.py  example.py  ingest.py  ingest_pinecone.py  pyproject.toml  retriever.py
benchmark_results_all/04-05-26-cold/: raw_results.json
benchmark_results_all/05-05-26-cold/: raw_results.json
benchmark_results_all/05-05-26-warm/: raw_results.json
benchmark_results_all/05-05-26-warm-crossencoder/: raw_results.json
chroma_db/: chroma.sqlite3
hybrib_kb/: retriever.py
hybrib_kb/lifecycle/: decay_engine.py  fetch_counter.py  state_machine.py
hybrib_kb/storage/: base.py  sqlite.py
hybrib_kb/transparency/: provenance.py
lifecycle/: state_machine.py
rag_wiki/: CONTRIBUTE.md  __init__.py  retriever.py  scheduler.py
rag_wiki/adapters/: __init__.py  llamaindex.py  pinecone_retriever.py
rag_wiki/lifecycle/: decay_engine.py  fetch_counter.py  state_machine.py
rag_wiki/storage/: __init__.py  base.py  chunk_store.py  global_store.py  memory.py  redis_store.py  sqlite.py
rag_wiki/transparency/: __init__.py  provenance.py
storage/: base.py
tests/: test_adapters.py  test_chunk_store.py  test_global_store.py  test_lifecycle.py  test_live.py  test_retriever.py  test_scheduler.py  test_storage.py  test_storage_memory.py  test_storage_redis.py
wiki/documents/: 20260429_134010_European Master_s Strategy _ Immediate Opportunities 2026_2027.txt  20260429_134011_Turkey Domestic Opportunities _ Career Paths _ April 2026.txt  20260429_134012_Personal Profile _ Salih Toprak 2026 _Your Core Identity _ Assets_.txt
